rust/codec-script/src/snapshots/decode_and_encode_articles@script.R-2.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 352
expression: script
input_file: fixtures/articles/scripts/script.R
---
# First paragraph, followed by some code

a <- 1

# Second paragraph, with a code expression that uses the above code `a*2`{r exec}, followed by some
# more code, this time multiline,

b <- 2

fn1 <- function() {
    x * x
}

# A multiline comment with a paragraph.
# 
# > And a quote block
# 
# And a list,
# 
# 1. One
# 2. Two
# 3. Three

c <- 3

# Parameters can be included in Markdown, and will be encoded as script variables immediately after
# they are declared.
# 
# Parameter d: &[d]{int}

# @skip
param__ <- function(type, index, def) { argv <- commandArgs(trailingOnly=TRUE); ifelse(type == 'string', identity, jsonlite::fromJSON)(ifelse(length(argv) > index + 1, argv[1 + index], def)) }

# @skip
d = param__('integer', 0, "")

cat('a + b + c + d = ', a + b + c + d)

